--- a/data/settings.ini
+++ b/data/settings.ini
@@ -1,6 +1,6 @@
 *Ana Ayarlar*
 #Aktivasyon Değerleri :
-false	true	true	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false
+false	true	true	false	false	false	false	false	false	true	false	false	true	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false	false
 #Aralık Değerleri :
 0	0	0
 #Kelime Değerleri :
@@ -14,7 +14,7 @@ https : //www.sahibinden.com/bmw-i-serisi-i8-premium-techno/benzin/otomatik/ikin
 #User Agent Modulü :
 Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.0.3 Safari/605.1.15")
 #Hatalı Resim :
-https : //image5.sahibinden.com/cms/files/sahi_images/Logo-1x.png
+
 
 *Kullanıcı Ayarları*
 #Firefox Görünüm Modu :
